# hello_thesis

./: CMakeLists.txt  README.md  add_cover.sh
thesis/: CMakeLists.txt  classicthesis-config.tex  phd.bib  thesis.tex
thesis/back_matter/: acknowledgements.tex  author.tex  bibliography.tex  samenvatting.tex  summary.tex
thesis/figure/: CMakeLists.txt
thesis/figure/paper-1/: CMakeLists.txt  my_figure.tex
thesis/front_matter/: contents.tex  title_page-1.tex  title_page-2.tex  title_page_back-1.tex  title_page_back-2.tex
thesis/main_matter/: introduction.tex  paper-1.tex  paper-2.tex  paper-3.tex  paper-4.tex  synthesis.tex
